# pdf-translate

./: .gitignore  AGENT_GUIDE.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: content_stream.rs  extract.rs  fonts.rs  lib.rs  main.rs  markdown.rs  overlay.rs  pdf_font.rs
crates/core/tests/: generate_fixture.rs
