[package]
name = "pdf-translate-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PDF text extraction and overlay engine for pdf-translate"

[[bin]]
name = "pdf-translate-core"
path = "src/main.rs"

[lib]
name = "pdf_translate_core"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
pdf_oxide = "0.3"
anyhow = "1"
ureq = "3"
dirs = "6"
lopdf = "0.34"

[[test]]
name = "generate_fixture"
path = "tests/generate_fixture.rs"
harness = false
